Server/esp_server/build/log/idf_py_stderr_output_76828
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:264:9: warning: 'esp_vfs_fat_sdmmc_unmount' is deprecated: Please use esp_vfs_fat_sdcard_unmount instead [-Wdeprecated-declarations]
  264 |         esp_vfs_fat_sdmmc_unmount();
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:6:
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/fatfs/vfs/esp_vfs_fat.h:221:11: note: declared here
  221 | esp_err_t esp_vfs_fat_sdmmc_unmount(void) __attribute__((deprecated("Please use esp_vfs_fat_sdcard_unmount instead")));
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:278:1: warning: data definition has no type or storage class
  278 | close(listen_sock);
      | ^~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:278:1: error: type defaults to 'int' in declaration of 'close' [-Wimplicit-int]
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:278:1: error: parameter names (without types) in function declaration [-Wdeclaration-missing-parameter-type]
In file included from /home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/time.h:16,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/newlib/platform_include/time.h:11,
                 from /home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/sys/stat.h:9,
                 from /home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/sys/_default_fcntl.h:211,
                 from /home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/sys/fcntl.h:3,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/port/include/lwipopts.h:15,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/lwip/src/include/lwip/opt.h:51,
                 from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/lwip/lwip/src/include/lwip/err.h:39,
                 from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:8:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:279:13: error: expected declaration specifiers or '...' before '(' token
  279 | vTaskDelete(NULL);
      |             ^~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:280:1: error: expected identifier or '(' before '}' token
  280 | }
      | ^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:94:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   94 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
